WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200174
[iPadOS] wix.com cannot select a template to edit or view
https://bugs.webkit.org/show_bug.cgi?id=200174
Summary
[iPadOS] wix.com cannot select a template to edit or view
alan
Reported
2019-07-26 13:40:41 PDT
<
rdar://problem/53281296
>
Attachments
Patch
(2.05 KB, patch)
2019-07-26 13:47 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-07-26 13:47:44 PDT
Created
attachment 374987
[details]
Patch
WebKit Commit Bot
Comment 2
2019-07-26 14:27:44 PDT
Comment on
attachment 374987
[details]
Patch Clearing flags on attachment: 374987 Committed
r247879
: <
https://trac.webkit.org/changeset/247879
>
WebKit Commit Bot
Comment 3
2019-07-26 14:27:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug